modify personal infos feature

--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -1,4 +1,4 @@
-<form action="processing/login.php" method="post" name="login_form">
+<form action="backend/processing/login.php" method="post" name="login_form">
     <div class="form_line">
         <label for="vet-or-client"> Je suis: </label> 
           <select name="vet-or-client" id="vet-or-client">
